force-app/main/default/objects/Contact/fields/Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fullname__c</fullName>
    <label>Fullname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>