force-app/main/default/objects/Contact/fields/Highest_Qualification_Level__c.field-meta.xml
<CustomField>
    <fullName>Highest_Qualification_Level__c</fullName>
    <label>Highest Qualification Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PSLE</fullName>
            </value>
            <value>
                <fullName>O-Level</fullName>
            </value>
            <value>
                <fullName>N-Level</fullName>
            </value>
            <value>
                <fullName>Vocational Training</fullName>
            </value>
            <value>
                <fullName>Nitec</fullName>
            </value>
            <value>
                <fullName>Higher Nitec</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>A-Level</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Special School</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>