force-app/main/default/objects/Contact/fields/Home_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Home_Ownership__c</fullName>
    <label>Home Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rental from private</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Rental from HDB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>