force-app/main/default/objects/Contact/fields/Last_Case_Closure_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Closure_Datetime__c</fullName>
    <label>Last Case Closure Datetime</label>
    <type>DateTime</type>
</CustomField>