force-app/main/default/objects/Contact/fields/Mailing_Block_House_No__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Block_House_No__c</fullName>
    <label>Block / House No.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>