force-app/main/default/objects/Contact/fields/Mailing_Building__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Building__c</fullName>
    <label>Building</label>
    <length>100</length>
    <type>Text</type>
</CustomField>