force-app/main/default/objects/Contact/fields/Mailing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Unit__c</fullName>
    <label>Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>