force-app/main/default/objects/Contact/fields/NRIC__c.field-meta.xml
<CustomField>
    <fullName>NRIC__c</fullName>
    <label>NRIC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>