force-app/main/default/objects/Contact/fields/Number_of_Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pregnancy__c</fullName>
    <label>Number of Pregnancy</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>