force-app/main/default/objects/Contact/fields/Other_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Other_Ethnicity__c</fullName>
    <label>Other</label>
    <length>30</length>
    <type>Text</type>
</CustomField>