force-app/main/default/objects/Contact/fields/Partner_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involvement__c</fullName>
    <inlineHelpText>Involvement of putative father</inlineHelpText>
    <label>Partner Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Involved</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>