force-app/main/default/objects/Contact/fields/QR_Code_Link__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Link__c</fullName>
    <formula>$Label.QR_Code_Server + Id</formula>
    <label>QR Code Link</label>
    <type>Text</type>
</CustomField>