force-app/main/default/objects/Contact/fields/Tax_Recipient_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_ID_Number__c</fullName>
    <label>Tax Recipient ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>