force-app/main/default/objects/Contact/fields/Type_Of_Housing__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Housing__c</fullName>
    <label>Type Of Housing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HDB 1-room</fullName>
            </value>
            <value>
                <fullName>HDB 2-room</fullName>
            </value>
            <value>
                <fullName>HDB 3-room</fullName>
            </value>
            <value>
                <fullName>HDB 4-room</fullName>
            </value>
            <value>
                <fullName>HDB 5-room</fullName>
            </value>
            <value>
                <fullName>HDB Executive</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Landed Property</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>