force-app/main/default/objects/Contact/fields/Volunteer_Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Activity_Status__c</fullName>
    <label>Volunteer Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>